--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 #------------------ Application Name ------------------
 spring.application.name=cache
 
+#------------------ Cache Configuration ------------------
+spring.cache.type=redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.cache.redis.time-to-live=5
+
 #------------------ JPA Configuration ------------------
 spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=update
@@ -17,3 +23,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/redis_cache
 spring.datasource.username=postgres
 spring.datasource.password=pass123
 spring.datasource.driver-class-name=org.postgresql.Driver
+
