--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=cache
 spring.cache.type=redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
-spring.cache.redis.time-to-live=5
+spring.data.redis.database=0
 
 #------------------ JPA Configuration ------------------
 spring.jpa.database=postgresql
